--- a/public/front_assets/css/sequence-theme.modern-slide-in.css
+++ b/public/front_assets/css/sequence-theme.modern-slide-in.css
@@ -1,42 +1,16 @@
 @charset "UTF-8";
-
-/**
- * Theme Name: Modern Slide In
- * Version: 2.0.0
- * Theme URL: http://sequencejs.com/themes/modern-slide-in/
- *
- * A minimalist theme for showcasing products
- *
- * This theme is powered by Sequence.js - The
- * responsive CSS animation framework for creating unique sliders,
- * presentations, banners, and other step-based applications.
- *
- * Author: Ian Lunn
- * Author URL: http://ianlunn.co.uk/
- *
- * Theme License: http://sequencejs.com/licenses/#free-theme
- * Sequence.js Licenses: http://sequencejs.com/licenses/
- *
- * Copyright © 2015 Ian Lunn Design Limited unless otherwise stated.
- */
-
 @import url(http://fonts.googleapis.com/css?family=Oxygen:700|Source+Sans+Pro:300);
 
 
 
 .seq {
   position: relative;
-  /*background: #D9D9D9 url("../images/bg-sequence.jpg") no-repeat;*/
   background-position: 0% 100%;
   background-size: cover;
-  /* Dimensions */
   height: 360px;
   width: 100%;
-  /*max-width: 1280px;*/
   max-width: 100%;
-  /* Hide anything that goes beyond the boundaries of the Sequence container */
   overflow: hidden;
-  /* Center the Sequence container on the page */
   margin: 0 auto;
   padding: 0;
 }
@@ -48,17 +22,16 @@
 .seq .seq-screen,
 .seq .seq-canvas,
 .seq .seq-canvas > * {
-  /* Reset the canvas and steps for more browser consistency */
   margin: 0;
   padding: 0;
   height: 100%;
   width: 100%;
   list-style: none;
 }
-
+/* 
 .seq .seq-canvas > * {
   position: absolute;
-}
+} */
 
 
 
@@ -145,7 +118,7 @@
 
 .seq .seq-next {
   right: 20px;
-  /*background: url("../img/slider/bt-next.png");*/
+ 
 }
 
 .seq .seq-next:focus,
@@ -157,7 +130,7 @@
 
 .seq .seq-prev {
   left: 20px;
-  /*background: url("../img/slider/bt-prev.png");*/
+  
 }
 
 .seq .seq-prev:focus,
@@ -182,14 +155,12 @@
   bottom: 15%;
   height: 100%;
   width: 100%;
-  /* Don't allow the image to exceed its original height */
-  /*max-height: 568px;*/
+ 
   max-height: 100%;
 }
 
 .seq .seq-model img {
-  /* Don't allow the image to exceed its original height */
-  /*max-height: 568px;*/
+ 
   max-height: 100%;
   display: block;
   height: 100%;
@@ -271,21 +242,16 @@
 
 @media only screen and (min-width: 640px) {
   .seq {
-    /* Make the container 16:9 but no bigger than 90% of the screen height */
     position: relative;
     height: auto;
-    /*height: 100%;*/
     height: 600px;
-    /*max-height: 90vh;*/
     max-height: 100%;
     min-height: 360px;
-    /* Move the background radial to the left */
     background-position: 50% 100%;
   }
 
   .seq:before {
-    /* Make an element a certain aspect ratio */
-    /*display: block;*/
+    
     display: none;
     content: "";
     width: 100%;
@@ -304,10 +270,8 @@
 
   .seq .seq-model,
   .seq .seq-title {
-    /*position: relative;*/
     display: inline-block;
-    /*vertical-align: middle;*/
-    /*margin: 0 5% 0 2.5%;*/
+    
   }
 
   .seq .seq-model {
@@ -385,7 +349,6 @@
 
 @media only screen and (min-width: 768px) {
   .seq.seq-active .seq-pagination {
-    /* Show navigation and pagination if JS is enabled */
     display: block;
   }
 
@@ -434,63 +397,17 @@
   }
 }
 
-@media only screen and (min-width: 860px) {
-  /*.seq .seq-model {
-    margin-left: 10%;
-    width: 27.5%;
-  }
 
-  .seq .seq-title {
-    width: 42.5%;
-    margin-right: 10%;
-  }
-
-  .seq .seq-title br {
-    display: inline-block;
-  }*/
-}
-
-@media only screen and (min-width: 1020px) {
- /* .seq .seq-model {
-    margin-left: 5%;
-    width: 32.5%;
-  }
-
-  .seq .seq-title {
-    width: 47.5%;
-    margin-right: 5%;
-  }*/
-}
-
-@media only screen and (min-width: 1120px) {
- /*.seq .seq-model {
-  height: 100%;
-  margin-left: 0;
-  margin-right: 0;
-  width: 100%;
-}
-
-  .seq .seq-title {
-   left: 38%;
-margin-right: 0;
-position: absolute;
-top: 38%;
-width: 52.5%;
-  }*/
-}
 
 @media (min--moz-device-pixel-ratio: 1.5), (-o-min-device-pixel-ratio: 3 / 2), (-webkit-min-device-pixel-ratio: 1.5), (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
  
 
   .seq .seq-next {
-    /*background: url("../images/bt-next@2x.png");*/
     background-size: 35px 66px;
   }
 
   .seq .seq-prev {
-    /*background: url("../images/bt-prev@2x.png");*/
     background-size: 35px 66px;
   }
 }
 
-/*# sourceMappingURL=sequence-theme.modern-slide-in.css.map */
